--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,77 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  transition: all 0.5s;
+  color: aliceblue;
+}
+
+svg{
+  display: inline;
+}
+
+
+/* ---------------------------------------------------- */
+
+
+
+html::-webkit-scrollbar {
+  /* width: "1px"; */
+  /* width: 5px !important; */
+  width: 8px;
+}
+
+html::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  /* width: 1px; */
+}
+ 
+/* Handle */
+html::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+html::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+
+/* ---------------------------------------------------- */
+
+
+div::-webkit-scrollbar {
+  height: 5px;
+}
+
+div::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+div::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+div::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+/* ---------------------------------------------------- */
+
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  --darkBackColor:#0b131e;
+  --darkContaintColor:#202b3b;
+  --cloudySkyBackColor:#606672;
+  --rainySkyBackColor:#6596ab;
+  --clearSkyBackColor:#0195f7;
 }
